fixed contrast on cards
removed the specific p color for cards to inherit the default

--- a/css/style-new.css
+++ b/css/style-new.css
@@ -464,9 +464,6 @@ text-decoration: none;
   text-decoration: none;
   font-size: clamp(1.375rem, 2.4vw, 1.75rem);
 }
-.card p{
-  color: #9B9B9B;
-}
 
 .footer {
     color: #222222;
